# infotecs_cpp_loglib_task

./: CMakeLists.txt  README.md  itog.txt  main.cpp
documentation/html/: _xD0_x9F_xD1_x80_xD0_xB8_xD0_xBC_xD0_xB5_xD1_x80-example.html  annotated.html  annotated_dup.js  appControllerLogger_8hpp_source.html  appControllerStats_8hpp_source.html  classAppContollerStats.html  classAppControllerLogger-members.html  classAppControllerLogger.html  classAppControllerLogger.js  classAppControllerStats-members.html  classAppControllerStats.html  classAppControllerStats.js  classFileLogger-members.html  classFileLogger.html  classFileLogger.js  classILogger-members.html  classILogger.html  classILogger.js  classLoggerFactory-members.html  classLoggerFactory.html  classLoggerFactory.js  classLoggerUtils-members.html  classLoggerUtils.html  classSocketLogger-members.html  classSocketLogger.html  classSocketLogger.js  classSocketStatsCollector-members.html  classSocketStatsCollector.html  classSocketStatsCollector.js  classThreadLogQueue-members.html  classThreadLogQueue.html  classThreadLogQueue.js  classappContoller.html  classappContollerStats.html  classappController-members.html  classappController.html  classappController.js  classappControllerLogger.html  classes.html  dir_2c6cf13730dd4e7d8c97f496f336d24c.html  (+32 more)
documentation/html/search/: all_0.js  all_4.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js
include/: ilogger.hpp
logger/: CMakeLists.txt  ilogger.hpp  logger.cpp  logger.hpp  loggerFactory.cpp  loggerFactory.hpp  loggerUtils.cpp  loggerUtils.hpp
logger_test_app/: CMakeLists.txt  appController.cpp  appController.hpp  appControllerLogger.cpp  appControllerLogger.hpp  m  main.cpp  threadLogQueue.cpp  threadLogQueue.hpp
server/: CMakeLists.txt  server  sock  socket.cpp
socket_stats_app/: CMakeLists.txt  appController.cpp  appController.hpp  appControllerStats.cpp  appControllerStats.hpp  main.cpp  socketStatsCollector.cpp  socketStatsCollector.hpp
src/: logger.cpp  logger.hpp
tests/: CMakeLists.txt  FileLogger_test.cpp  LoggerFactory_test.cpp  LoggerUtils_test.cpp
